<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/planDetailsDisplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlanDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_planDetails"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/screenHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/planDetailsActivityTitle"/>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/dateTimeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/titleTextEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/plan_title"
                android:inputType="text"/>

            <Switch
                android:id="@+id/hasDateSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/plan_has_a_date"/>

            <LinearLayout
                android:id="@+id/hasDatePanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/plan_due_date"/>

                <Button
                    android:id="@+id/dueDateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/choose_a_due_date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/plan_alarm_date"/>

                <Button
                    android:id="@+id/alarmDateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/choose_an_alarm_date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/repeat"/>

                <Spinner
                    android:id="@+id/repeatSpinner"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_height="50dp"
                    android:tooltipText="Repeat"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>

            <EditText
                android:id="@+id/descriptionTextEdit"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/plan_description"
                android:inputType="textMultiLine"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/cancelBtn_activity_plan_details"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/cancel"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/approveBtn_activity_plan_details"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/add"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>