<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FilterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/from_date" />

        <DatePicker
            android:id="@+id/fromDatePicker"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/to_date" />

        <DatePicker
            android:id="@+id/toDatePicker"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/showResultBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="@string/show_results"/>

    </LinearLayout>

</FrameLayout>